<resources>
    <string name="app_name">Kibbeh</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="contactno">Contact No</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="fullname">Full Name</string>
   <string name="facebook_app_id">770158159800231</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="splushscreentext">Start making cash by selling your stuff or find bargains for sale near you</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_Sell_your_stuff">Home</string>
    <string name="nav_item_Chat">Recipes</string>
    <string name="nav_item_Categories">Favorites</string>
    <string name="nav_item_My_Profile">Popular</string>
    <string name="nav_item_My_Exchanges">My Account</string>
    <string name="nav_item_Help">Help</string>
    <string name="nav_item_Logout">Logout</string>
    <string name="spinner_department">Department</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/home</item>
        <item>@string/store</item>
        <item>@string/recipes</item>
        <item>@string/favourite</item>
        <item>@string/popular</item>
        <item>@string/cart</item>
        <item>@string/help</item>
        <item>@string/myaccount</item>
        <item>@string/logout</item>
    </string-array>


    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="getstarted">GET STARTED</string>
    <string name="available">available in</string>
    <string name="reset_email">Enter your login email</string>
    <string name="password_recover">Forget Password</string>
    <string name="add_product">+\  Add</string>
    <string name="remove_product">-\  Remove</string>
    <string name="viewmore">VIEW MORE</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="recipes">Recipes</string>
    <string name="favourite">Favourite</string>
    <string name="popular">popular</string>
    <string name="cart">Cart</string>
    <string name="help">Help</string>
    <string name="myaccount">My Account</string>
    <string name="logout">Logout</string>
    <string name="search_hint">Search</string>

    <string name="my_account">My Account </string>
    <string name="terms_condition">Terms &amp; Conditions </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="coupons">Coupons</string>
    <string name="orderhistory">Order history</string>
    <string name="last_name">Last Name</string>
    <string name="firt_name">First Name</string>
    <string name="phone">Phone</string>
    <string name="save_info">Save Info</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_information">Account Information</string>
    <string name="location_note">Type Of Location</string>
    <string name="radio_residencial">Residential</string>
    <string name="radio_business">Business</string>
    <string name="coupne_code">Coupen Codes</string>
    <string name="coupne_code_note">Apply Discount To Your Account</string>
    <string name="reedem_coupen">Redeem Coupen</string>
    <string name="note">You have 0 Shopping credits left</string>
    <string name="somethig_went_wrong">Something went wrong</string>
    <string name="Recipes">Recipes</string>
    <string name="Favorite">Facorite</string>
    <string name="Fevorite">Fevorite</string>
    <string name="delivery_charge">Free Delivery for Order more than $30</string>
    <string name="cart_item_not_found">no item available in cart</string>
    <string name="recipes_detail">Recipes Detail</string>
    <string name="see_more">: View more</string>
    <string name="no_data_found">no data found</string>
    <string name="Deliery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="order">Order</string>
    <string name="asap">ASAP (Within 3 hours)</string>
    <string name="time_9">9AM to 12PM</string>
    <string name="time_12">12PM to 3PM</string>
    <string name="time_3">3PM to 6PM</string>
    <string name="time_6">6PM to 9PM</string>
    <string name="Delivery_date">Delivery Date:</string>
    <string name="add_Address">Add Address</string>
    <string name="store">Store</string>
    <string name="Delivery_here">+ Delivery Here</string>
    <string name="credit_card">Credit Card</string>
    <string name="pay_with_this">+ pay with this card</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="add_new_card">Add New Card</string>
    <string name="save_card">Save Card</string>
    <string name="cancel">Cancel</string>
    <string name="you_order_received">Thank you, your order has been received</string>
    <string name="your_delivery_date">Your Delivery date is :</string>
    <string name="your_time_slot_is">Your Time Slot is :</string>
    <string name="order_preview">Your Order Preview</string>
    <string name="product_image">Product image</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">quantity</string>
    <string name="price">Price</string>
    <string name="order_total">Your Order Total</string>
    <string name="delivery_charge_plus">+ Delivery Charge</string>
    <string name="grand_total">Grand Total =</string>
    <string name="return_store">Return To Store</string>
    <string name="number">Number</string>
    <string name="Action">Action</string>
    <string name="method">Method</string>
    <string name="delete">delete</string>
    <string name="otp">Otp</string>
    <string name="enterotp">Enter your OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="or">Or</string>
    <string name="lebanese">Lebanense Taverna</string>
    <string name="babylon">Babylon Market</string>
    <string name="amount">Amount</string>
    <string name="tax_charge">Tax Charge</string>
 <string name="deliverycharge">Delivery Charge</string>
    <string name="checkoutnow">CHECK OUT NOW</string>


</resources>
