<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/actionbar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_coupen"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/green"
            android:text="@string/coupne_code"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/green"
            android:text="@string/coupne_code_note"/>
        <TextView
            android:id="@+id/tvRedeemCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/reedem_coupen"/>
        <TextView
            android:id="@+id/tvCreditLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:text="@string/note"/>
    </LinearLayout>
</LinearLayout>