<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/actionBarBackImage"
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:padding="5sp"
        android:src="@drawable/back_button_selector"
        android:layout_alignParentLeft="true" />



    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:alpha="0.5"
        android:id="@+id/actionBarCheckOutDelivery"
        android:layout_width="wrap_content"
        android:text="@string/Deliery"
        android:drawableRight="@drawable/ic_move_next"
            android:layout_height="match_parent"
            android:gravity="center"
        android:textColor="@color/white" />
        <TextView
            android:id="@+id/actionBarCheckOutPayment"
            android:layout_width="wrap_content"
            android:text="@string/payment"
            android:alpha="0.5"
            android:drawableRight="@drawable/ic_move_next"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            />
        <TextView
            android:id="@+id/actionBarCheckOutOrder"
            android:layout_width="wrap_content"
            android:text="@string/order"
            android:alpha="0.5"
            android:drawableRight="@drawable/ic_move_next"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            />




    </LinearLayout>
</RelativeLayout>
